# vertigo

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py
vertigo/: _version.py  distance.py  freesurfer.py  io.py  mesh.py  spins.py  surrogates.py  utils.py
vertigo/data/: osf.json
vertigo/datasets/: __init__.py  fetchers.py  osf.py  utils.py
