[metadata]
name = vertigo
url = https://github.com/rmarkello/vertigo
download_url = https://github.com/rmarkello/vertigo
author = vertigo developers
maintainer = Ross Markello
maintainer_email = rossmarkello@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
license = BSD-3
description = A toolbox for conducting spatially-constrained null models
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent
provides =
    vertigo

[options]
python_requires = >=3.5.1
install_requires =
    nibabel
    numpy >=1.16
    scipy
tests_require =
    pytest >=3.6
test_suite = pytest
zip_safe = False
packages = find:
include_package_data = True

[options.extras_require]
doc =
    sphinx>=2.0
    sphinx_rtd_theme
    sphinx-gallery
style =
    flake8
test =
    pytest-cov
all =
    %(doc)s
    %(style)s
    %(test)s

[options.package_data]
vertigo =
    vertigo/data/*
    vertigo/tests/data/*

[coverage:run]
omit =
    */vertigo/_version.py

[flake8]
doctests = True
exclude =
    *build/
    *sphinx*
    */__init__.py
ignore = W503, E402
max-line-length = 79

[tool:pytest]
doctest_optionflags = NORMALIZE_WHITESPACE
xfail_strict = true
addopts = -rx

[versioneer]
VCS = git
style = pep440
versionfile_source = vertigo/_version.py
versionfile_build = vertigo/_version.py
tag_prefix =
parentdir_prefix =
